ConEmu 171205 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.171109.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.171109.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=171203
-location_arc=4164005,x3F7B0A4F,https://github.com/Maximus5/ConEmu/releases/download/v17.12.03/ConEmuPack.171203.7z
-location_exe=6393720,x9B8E8307,https://github.com/Maximus5/ConEmu/releases/download/v17.12.03/ConEmuSetup.171203.exe
-md5_arc=a9c1463d769adda451443f599b03d6ef
-md5_exe=97842beb57b4618541373b8cb5bf9afd
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.171203.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.171203.exe?use_mirror=autoselect
+version=171205
+location_arc=4166593,x1F385795,https://github.com/Maximus5/ConEmu/releases/download/v17.12.05/ConEmuPack.171205.7z
+location_exe=6396280,x657ECE75,https://github.com/Maximus5/ConEmu/releases/download/v17.12.05/ConEmuSetup.171205.exe
+md5_arc=539fcac2aeb8a2c740a23555f4f93d7d
+md5_exe=eb5865ae4be8fbd2993c30c7f99f47d4
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.171205.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.171205.exe?use_mirror=autoselect
