--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.171109.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.171109.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=171205
-location_arc=4166593,x1F385795,https://github.com/Maximus5/ConEmu/releases/download/v17.12.05/ConEmuPack.171205.7z
-location_exe=6396280,x657ECE75,https://github.com/Maximus5/ConEmu/releases/download/v17.12.05/ConEmuSetup.171205.exe
-md5_arc=539fcac2aeb8a2c740a23555f4f93d7d
-md5_exe=eb5865ae4be8fbd2993c30c7f99f47d4
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.171205.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.171205.exe?use_mirror=autoselect
+version=171217
+location_arc=4277317,x8BE4EF12,https://github.com/Maximus5/ConEmu/releases/download/v17.12.17/ConEmuPack.171217.7z
+location_exe=6529400,x05FD0320,https://github.com/Maximus5/ConEmu/releases/download/v17.12.17/ConEmuSetup.171217.exe
+md5_arc=cc3a9b77ad4a94a3655f0c477b62aa95
+md5_exe=4e5c0f103ff126acdcd8dcf2d3809410
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.171217.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.171217.exe?use_mirror=autoselect
