--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.171109.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.171109.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=171217
-location_arc=4277317,x8BE4EF12,https://github.com/Maximus5/ConEmu/releases/download/v17.12.17/ConEmuPack.171217.7z
-location_exe=6529400,x05FD0320,https://github.com/Maximus5/ConEmu/releases/download/v17.12.17/ConEmuSetup.171217.exe
-md5_arc=cc3a9b77ad4a94a3655f0c477b62aa95
-md5_exe=4e5c0f103ff126acdcd8dcf2d3809410
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.171217.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.171217.exe?use_mirror=autoselect
+version=171226
+location_arc=4279491,x7ABB791B,https://github.com/Maximus5/ConEmu/releases/download/v17.12.26/ConEmuPack.171226.7z
+location_exe=6527352,x616477E3,https://github.com/Maximus5/ConEmu/releases/download/v17.12.26/ConEmuSetup.171226.exe
+md5_arc=09c6f18648f4df8b017910412635e3ab
+md5_exe=2f9610f2776a43c8998836ebc0f496d7
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.171226.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.171226.exe?use_mirror=autoselect
