ConEmu 180108 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.171109.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.171109.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=171226
-location_arc=4279491,x7ABB791B,https://github.com/Maximus5/ConEmu/releases/download/v17.12.26/ConEmuPack.171226.7z
-location_exe=6527352,x616477E3,https://github.com/Maximus5/ConEmu/releases/download/v17.12.26/ConEmuSetup.171226.exe
-md5_arc=09c6f18648f4df8b017910412635e3ab
-md5_exe=2f9610f2776a43c8998836ebc0f496d7
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.171226.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.171226.exe?use_mirror=autoselect
+version=180108
+location_arc=4255011,xD342DD79,https://github.com/Maximus5/ConEmu/releases/download/v18.01.08/ConEmuPack.180108.7z
+location_exe=6529912,x575F4CB1,https://github.com/Maximus5/ConEmu/releases/download/v18.01.08/ConEmuSetup.180108.exe
+md5_arc=7d0444a63f49eafa13ecb9a999109321
+md5_exe=31a7ba0470c26ff6ef93e224973dbb1c
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.180108.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.180108.exe?use_mirror=autoselect
