--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.171109.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.171109.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=180108
-location_arc=4255011,xD342DD79,https://github.com/Maximus5/ConEmu/releases/download/v18.01.08/ConEmuPack.180108.7z
-location_exe=6529912,x575F4CB1,https://github.com/Maximus5/ConEmu/releases/download/v18.01.08/ConEmuSetup.180108.exe
-md5_arc=7d0444a63f49eafa13ecb9a999109321
-md5_exe=31a7ba0470c26ff6ef93e224973dbb1c
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.180108.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.180108.exe?use_mirror=autoselect
+version=180111
+location_arc=4256738,xD7E36DE0,https://github.com/Maximus5/ConEmu/releases/download/v18.01.11/ConEmuPack.180111.7z
+location_exe=6530424,x36D627D3,https://github.com/Maximus5/ConEmu/releases/download/v18.01.11/ConEmuSetup.180111.exe
+md5_arc=4e2cc433776e2ebc7f3d36d51e45c009
+md5_exe=2e26fc55b6383ece17ba33e37fd85e45
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.180111.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.180111.exe?use_mirror=autoselect
