ConEmu 180114 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.171109.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.171109.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=180111
-location_arc=4256738,xD7E36DE0,https://github.com/Maximus5/ConEmu/releases/download/v18.01.11/ConEmuPack.180111.7z
-location_exe=6530424,x36D627D3,https://github.com/Maximus5/ConEmu/releases/download/v18.01.11/ConEmuSetup.180111.exe
-md5_arc=4e2cc433776e2ebc7f3d36d51e45c009
-md5_exe=2e26fc55b6383ece17ba33e37fd85e45
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.180111.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.180111.exe?use_mirror=autoselect
+version=180114
+location_arc=4256469,x9A8EA7A1,https://github.com/Maximus5/ConEmu/releases/download/v18.01.14/ConEmuPack.180114.7z
+location_exe=6531960,x38870619,https://github.com/Maximus5/ConEmu/releases/download/v18.01.14/ConEmuSetup.180114.exe
+md5_arc=3bfa92b4e9fd3cc693af9a656713b8e4
+md5_exe=1fc1f18015f3a6314d8c9adee9768dc4
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.180114.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.180114.exe?use_mirror=autoselect
