ConEmu 180130 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.171109.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.171109.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=180114
-location_arc=4256469,x9A8EA7A1,https://github.com/Maximus5/ConEmu/releases/download/v18.01.14/ConEmuPack.180114.7z
-location_exe=6531960,x38870619,https://github.com/Maximus5/ConEmu/releases/download/v18.01.14/ConEmuSetup.180114.exe
-md5_arc=3bfa92b4e9fd3cc693af9a656713b8e4
-md5_exe=1fc1f18015f3a6314d8c9adee9768dc4
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.180114.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.180114.exe?use_mirror=autoselect
+version=180130
+location_arc=4270813,xFDC5D243,https://github.com/Maximus5/ConEmu/releases/download/v18.01.30/ConEmuPack.180130.7z
+location_exe=6544760,x62001CD2,https://github.com/Maximus5/ConEmu/releases/download/v18.01.30/ConEmuSetup.180130.exe
+md5_arc=617d7e05cc38ea1b10f1332bb32384a6
+md5_exe=4e9aeb28c693744739f627a7aa027d20
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.180130.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.180130.exe?use_mirror=autoselect
