ConEmu 180131 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.171109.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.171109.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=180114
-location_arc=4256469,x9A8EA7A1,https://github.com/Maximus5/ConEmu/releases/download/v18.01.14/ConEmuPack.180114.7z
-location_exe=6531960,x38870619,https://github.com/Maximus5/ConEmu/releases/download/v18.01.14/ConEmuSetup.180114.exe
-md5_arc=3bfa92b4e9fd3cc693af9a656713b8e4
-md5_exe=1fc1f18015f3a6314d8c9adee9768dc4
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.180114.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.180114.exe?use_mirror=autoselect
+version=180131
+location_arc=4271168,xEC67EB85,https://github.com/Maximus5/ConEmu/releases/download/v18.01.31/ConEmuPack.180131.7z
+location_exe=6543224,x1132E1E3,https://github.com/Maximus5/ConEmu/releases/download/v18.01.31/ConEmuSetup.180131.exe
+md5_arc=33936cbcf45120589d9976e5e024e68c
+md5_exe=721509d0cdbb0bae963e18d215534b1d
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.180131.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.180131.exe?use_mirror=autoselect
