ConEmu 180206 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.171109.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.171109.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=180131
-location_arc=4271168,xEC67EB85,https://github.com/Maximus5/ConEmu/releases/download/v18.01.31/ConEmuPack.180131.7z
-location_exe=6543224,x1132E1E3,https://github.com/Maximus5/ConEmu/releases/download/v18.01.31/ConEmuSetup.180131.exe
-md5_arc=33936cbcf45120589d9976e5e024e68c
-md5_exe=721509d0cdbb0bae963e18d215534b1d
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.180131.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.180131.exe?use_mirror=autoselect
+version=180206
+location_arc=4271909,x44E3934E,https://github.com/Maximus5/ConEmu/releases/download/v18.02.06/ConEmuPack.180206.7z
+location_exe=6545272,x2EBD3260,https://github.com/Maximus5/ConEmu/releases/download/v18.02.06/ConEmuSetup.180206.exe
+md5_arc=e188b19263a344e3b9ff00249d7eb3b1
+md5_exe=39f1ed0400d3fd4fcb83d7f3a95909f9
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.180206.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.180206.exe?use_mirror=autoselect
