ConEmu 180309 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=171109
-location_arc=4141243,xC361779D,https://github.com/Maximus5/ConEmu/releases/download/v17.11.09/ConEmuPack.171109.7z
-location_exe=6359104,x43B4365D,https://github.com/Maximus5/ConEmu/releases/download/v17.11.09/ConEmuSetup.171109.exe
-md5_arc=7827460033291ef30d0fdc716f9c2cad
-md5_exe=47a66a52c65cee9583bf4c401f45ef4b
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.171109.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.171109.exe?use_mirror=autoselect
+version=180309
+location_arc=4254492,xEEC2081A,https://github.com/Maximus5/ConEmu/releases/download/v18.03.09/ConEmuPack.180309.7z
+location_exe=6516088,xEE6787F4,https://github.com/Maximus5/ConEmu/releases/download/v18.03.09/ConEmuSetup.180309.exe
+md5_arc=4bb5a55b562fcbfd9df3a59162dfc855
+md5_exe=45480811f0f6b375445faf12ed6009c4
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180309.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180309.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=180206
-location_arc=4271909,x44E3934E,https://github.com/Maximus5/ConEmu/releases/download/v18.02.06/ConEmuPack.180206.7z
-location_exe=6545272,x2EBD3260,https://github.com/Maximus5/ConEmu/releases/download/v18.02.06/ConEmuSetup.180206.exe
-md5_arc=e188b19263a344e3b9ff00249d7eb3b1
-md5_exe=39f1ed0400d3fd4fcb83d7f3a95909f9
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.180206.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.180206.exe?use_mirror=autoselect
+version=180309
+location_arc=4254492,xEEC2081A,https://github.com/Maximus5/ConEmu/releases/download/v18.03.09/ConEmuPack.180309.7z
+location_exe=6516088,xEE6787F4,https://github.com/Maximus5/ConEmu/releases/download/v18.03.09/ConEmuSetup.180309.exe
+md5_arc=4bb5a55b562fcbfd9df3a59162dfc855
+md5_exe=45480811f0f6b375445faf12ed6009c4
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180309.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180309.exe?use_mirror=autoselect
