--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=180309
-location_arc=4254492,xEEC2081A,https://github.com/Maximus5/ConEmu/releases/download/v18.03.09/ConEmuPack.180309.7z
-location_exe=6516088,xEE6787F4,https://github.com/Maximus5/ConEmu/releases/download/v18.03.09/ConEmuSetup.180309.exe
-md5_arc=4bb5a55b562fcbfd9df3a59162dfc855
-md5_exe=45480811f0f6b375445faf12ed6009c4
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180309.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180309.exe?use_mirror=autoselect
+version=180408
+location_arc=4251566,x42CED42F,https://github.com/Maximus5/ConEmu/releases/download/v18.04.08/ConEmuPack.180408.7z
+location_exe=6515776,x4EB3EBD8,https://github.com/Maximus5/ConEmu/releases/download/v18.04.08/ConEmuSetup.180408.exe
+md5_arc=09dc8224dad1c3b1e1cfb998d7fc5c5c
+md5_exe=c5122560e586a0cf959a6717aac2f2a3
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180408.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180408.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=180318
-location_arc=4278474,x604C576B,https://github.com/Maximus5/ConEmu/releases/download/v18.03.18/ConEmuPack.180318.7z
-location_exe=6539640,x088DFA7E,https://github.com/Maximus5/ConEmu/releases/download/v18.03.18/ConEmuSetup.180318.exe
-md5_arc=23fd259511d8c819dec2a6ed13acadb0
-md5_exe=67ac5b090106ce850b8e2785345375ee
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.180318.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.180318.exe?use_mirror=autoselect
+version=180408
+location_arc=4251566,x42CED42F,https://github.com/Maximus5/ConEmu/releases/download/v18.04.08/ConEmuPack.180408.7z
+location_exe=6515776,x4EB3EBD8,https://github.com/Maximus5/ConEmu/releases/download/v18.04.08/ConEmuSetup.180408.exe
+md5_arc=09dc8224dad1c3b1e1cfb998d7fc5c5c
+md5_exe=c5122560e586a0cf959a6717aac2f2a3
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180408.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180408.exe?use_mirror=autoselect
