ConEmu 180409 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=180408
-location_arc=4251566,x42CED42F,https://github.com/Maximus5/ConEmu/releases/download/v18.04.08/ConEmuPack.180408.7z
-location_exe=6515776,x4EB3EBD8,https://github.com/Maximus5/ConEmu/releases/download/v18.04.08/ConEmuSetup.180408.exe
-md5_arc=09dc8224dad1c3b1e1cfb998d7fc5c5c
-md5_exe=c5122560e586a0cf959a6717aac2f2a3
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180408.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180408.exe?use_mirror=autoselect
+version=180409
+location_arc=4292337,xFD9A4380,https://github.com/Maximus5/ConEmu/releases/download/v18.04.09/ConEmuPack.180409.7z
+location_exe=6560320,x790225E3,https://github.com/Maximus5/ConEmu/releases/download/v18.04.09/ConEmuSetup.180409.exe
+md5_arc=e156a83a94b79b6312334471589e3e52
+md5_exe=34680d03f1ad9afdb2461d38af2d4c37
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180409.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180409.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=180408
-location_arc=4251566,x42CED42F,https://github.com/Maximus5/ConEmu/releases/download/v18.04.08/ConEmuPack.180408.7z
-location_exe=6515776,x4EB3EBD8,https://github.com/Maximus5/ConEmu/releases/download/v18.04.08/ConEmuSetup.180408.exe
-md5_arc=09dc8224dad1c3b1e1cfb998d7fc5c5c
-md5_exe=c5122560e586a0cf959a6717aac2f2a3
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180408.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180408.exe?use_mirror=autoselect
+version=180409
+location_arc=4292337,xFD9A4380,https://github.com/Maximus5/ConEmu/releases/download/v18.04.09/ConEmuPack.180409.7z
+location_exe=6560320,x790225E3,https://github.com/Maximus5/ConEmu/releases/download/v18.04.09/ConEmuSetup.180409.exe
+md5_arc=e156a83a94b79b6312334471589e3e52
+md5_exe=34680d03f1ad9afdb2461d38af2d4c37
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180409.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180409.exe?use_mirror=autoselect
