--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=180409
-location_arc=4292337,xFD9A4380,https://github.com/Maximus5/ConEmu/releases/download/v18.04.09/ConEmuPack.180409.7z
-location_exe=6560320,x790225E3,https://github.com/Maximus5/ConEmu/releases/download/v18.04.09/ConEmuSetup.180409.exe
-md5_arc=e156a83a94b79b6312334471589e3e52
-md5_exe=34680d03f1ad9afdb2461d38af2d4c37
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180409.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180409.exe?use_mirror=autoselect
+version=180411
+location_arc=4294465,x1FC92079,https://github.com/Maximus5/ConEmu/releases/download/v18.04.11/ConEmuPack.180411.7z
+location_exe=6560320,xEC9B9466,https://github.com/Maximus5/ConEmu/releases/download/v18.04.11/ConEmuSetup.180411.exe
+md5_arc=e82c8058f03f290696bcc278601fd937
+md5_exe=32e14c29181021f660cd3535bb464607
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180411.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180411.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=180409
-location_arc=4292337,xFD9A4380,https://github.com/Maximus5/ConEmu/releases/download/v18.04.09/ConEmuPack.180409.7z
-location_exe=6560320,x790225E3,https://github.com/Maximus5/ConEmu/releases/download/v18.04.09/ConEmuSetup.180409.exe
-md5_arc=e156a83a94b79b6312334471589e3e52
-md5_exe=34680d03f1ad9afdb2461d38af2d4c37
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180409.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180409.exe?use_mirror=autoselect
+version=180411
+location_arc=4294465,x1FC92079,https://github.com/Maximus5/ConEmu/releases/download/v18.04.11/ConEmuPack.180411.7z
+location_exe=6560320,xEC9B9466,https://github.com/Maximus5/ConEmu/releases/download/v18.04.11/ConEmuSetup.180411.exe
+md5_arc=e82c8058f03f290696bcc278601fd937
+md5_exe=32e14c29181021f660cd3535bb464607
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180411.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180411.exe?use_mirror=autoselect
