ConEmu 180415 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=180411
-location_arc=4294465,x1FC92079,https://github.com/Maximus5/ConEmu/releases/download/v18.04.11/ConEmuPack.180411.7z
-location_exe=6560320,xEC9B9466,https://github.com/Maximus5/ConEmu/releases/download/v18.04.11/ConEmuSetup.180411.exe
-md5_arc=e82c8058f03f290696bcc278601fd937
-md5_exe=32e14c29181021f660cd3535bb464607
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180411.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180411.exe?use_mirror=autoselect
+version=180415
+location_arc=4295894,xF13E3441,https://github.com/Maximus5/ConEmu/releases/download/v18.04.15/ConEmuPack.180415.7z
+location_exe=6562880,x54AC3CC4,https://github.com/Maximus5/ConEmu/releases/download/v18.04.15/ConEmuSetup.180415.exe
+md5_arc=418f8bb813d84a3a0ffdcf6737ab84d2
+md5_exe=c7294679c4dc7bf6955bcb1143aaa341
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180415.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180415.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=180411
-location_arc=4294465,x1FC92079,https://github.com/Maximus5/ConEmu/releases/download/v18.04.11/ConEmuPack.180411.7z
-location_exe=6560320,xEC9B9466,https://github.com/Maximus5/ConEmu/releases/download/v18.04.11/ConEmuSetup.180411.exe
-md5_arc=e82c8058f03f290696bcc278601fd937
-md5_exe=32e14c29181021f660cd3535bb464607
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180411.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180411.exe?use_mirror=autoselect
+version=180415
+location_arc=4295894,xF13E3441,https://github.com/Maximus5/ConEmu/releases/download/v18.04.15/ConEmuPack.180415.7z
+location_exe=6562880,x54AC3CC4,https://github.com/Maximus5/ConEmu/releases/download/v18.04.15/ConEmuSetup.180415.exe
+md5_arc=418f8bb813d84a3a0ffdcf6737ab84d2
+md5_exe=c7294679c4dc7bf6955bcb1143aaa341
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180415.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180415.exe?use_mirror=autoselect
