--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=180415
-location_arc=4295894,xF13E3441,https://github.com/Maximus5/ConEmu/releases/download/v18.04.15/ConEmuPack.180415.7z
-location_exe=6562880,x54AC3CC4,https://github.com/Maximus5/ConEmu/releases/download/v18.04.15/ConEmuSetup.180415.exe
-md5_arc=418f8bb813d84a3a0ffdcf6737ab84d2
-md5_exe=c7294679c4dc7bf6955bcb1143aaa341
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180415.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180415.exe?use_mirror=autoselect
+version=180416
+location_arc=4294574,x2E4785AF,https://github.com/Maximus5/ConEmu/releases/download/v18.04.16/ConEmuPack.180416.7z
+location_exe=6562880,x3BBF16E8,https://github.com/Maximus5/ConEmu/releases/download/v18.04.16/ConEmuSetup.180416.exe
+md5_arc=be66bd2a3761f5579278a2a657faba56
+md5_exe=a6c7a4c85f5437c8c87f91700648300f
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180416.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180416.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=180415
-location_arc=4295894,xF13E3441,https://github.com/Maximus5/ConEmu/releases/download/v18.04.15/ConEmuPack.180415.7z
-location_exe=6562880,x54AC3CC4,https://github.com/Maximus5/ConEmu/releases/download/v18.04.15/ConEmuSetup.180415.exe
-md5_arc=418f8bb813d84a3a0ffdcf6737ab84d2
-md5_exe=c7294679c4dc7bf6955bcb1143aaa341
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180415.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180415.exe?use_mirror=autoselect
+version=180416
+location_arc=4294574,x2E4785AF,https://github.com/Maximus5/ConEmu/releases/download/v18.04.16/ConEmuPack.180416.7z
+location_exe=6562880,x3BBF16E8,https://github.com/Maximus5/ConEmu/releases/download/v18.04.16/ConEmuSetup.180416.exe
+md5_arc=be66bd2a3761f5579278a2a657faba56
+md5_exe=a6c7a4c85f5437c8c87f91700648300f
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180416.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180416.exe?use_mirror=autoselect
