ConEmu 180418 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=180416
-location_arc=4294574,x2E4785AF,https://github.com/Maximus5/ConEmu/releases/download/v18.04.16/ConEmuPack.180416.7z
-location_exe=6562880,x3BBF16E8,https://github.com/Maximus5/ConEmu/releases/download/v18.04.16/ConEmuSetup.180416.exe
-md5_arc=be66bd2a3761f5579278a2a657faba56
-md5_exe=a6c7a4c85f5437c8c87f91700648300f
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180416.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180416.exe?use_mirror=autoselect
+version=180418
+location_arc=4297825,x5E519EAE,https://github.com/Maximus5/ConEmu/releases/download/v18.04.18/ConEmuPack.180418.7z
+location_exe=6562880,xD83D9754,https://github.com/Maximus5/ConEmu/releases/download/v18.04.18/ConEmuSetup.180418.exe
+md5_arc=926c698dae8ce38646a7432388f86679
+md5_exe=048bad469f677e92656e9df3e59af264
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180418.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180418.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=180416
-location_arc=4294574,x2E4785AF,https://github.com/Maximus5/ConEmu/releases/download/v18.04.16/ConEmuPack.180416.7z
-location_exe=6562880,x3BBF16E8,https://github.com/Maximus5/ConEmu/releases/download/v18.04.16/ConEmuSetup.180416.exe
-md5_arc=be66bd2a3761f5579278a2a657faba56
-md5_exe=a6c7a4c85f5437c8c87f91700648300f
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180416.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180416.exe?use_mirror=autoselect
+version=180418
+location_arc=4297825,x5E519EAE,https://github.com/Maximus5/ConEmu/releases/download/v18.04.18/ConEmuPack.180418.7z
+location_exe=6562880,xD83D9754,https://github.com/Maximus5/ConEmu/releases/download/v18.04.18/ConEmuSetup.180418.exe
+md5_arc=926c698dae8ce38646a7432388f86679
+md5_exe=048bad469f677e92656e9df3e59af264
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180418.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180418.exe?use_mirror=autoselect
