ConEmu 180422 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=180418
-location_arc=4297825,x5E519EAE,https://github.com/Maximus5/ConEmu/releases/download/v18.04.18/ConEmuPack.180418.7z
-location_exe=6562880,xD83D9754,https://github.com/Maximus5/ConEmu/releases/download/v18.04.18/ConEmuSetup.180418.exe
-md5_arc=926c698dae8ce38646a7432388f86679
-md5_exe=048bad469f677e92656e9df3e59af264
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180418.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180418.exe?use_mirror=autoselect
+version=180422
+location_arc=4300834,x9DB30FFC,https://github.com/Maximus5/ConEmu/releases/download/v18.04.22/ConEmuPack.180422.7z
+location_exe=6574144,xDB4D87D9,https://github.com/Maximus5/ConEmu/releases/download/v18.04.22/ConEmuSetup.180422.exe
+md5_arc=f83c682926b44e5c3010da7cb05b82a6
+md5_exe=ca36106b8dbecbca68c3c2132afc3e6b
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180422.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180422.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=180418
-location_arc=4297825,x5E519EAE,https://github.com/Maximus5/ConEmu/releases/download/v18.04.18/ConEmuPack.180418.7z
-location_exe=6562880,xD83D9754,https://github.com/Maximus5/ConEmu/releases/download/v18.04.18/ConEmuSetup.180418.exe
-md5_arc=926c698dae8ce38646a7432388f86679
-md5_exe=048bad469f677e92656e9df3e59af264
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180418.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180418.exe?use_mirror=autoselect
+version=180422
+location_arc=4300834,x9DB30FFC,https://github.com/Maximus5/ConEmu/releases/download/v18.04.22/ConEmuPack.180422.7z
+location_exe=6574144,xDB4D87D9,https://github.com/Maximus5/ConEmu/releases/download/v18.04.22/ConEmuSetup.180422.exe
+md5_arc=f83c682926b44e5c3010da7cb05b82a6
+md5_exe=ca36106b8dbecbca68c3c2132afc3e6b
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180422.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180422.exe?use_mirror=autoselect
