--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=180422
-location_arc=4300834,x9DB30FFC,https://github.com/Maximus5/ConEmu/releases/download/v18.04.22/ConEmuPack.180422.7z
-location_exe=6574144,xDB4D87D9,https://github.com/Maximus5/ConEmu/releases/download/v18.04.22/ConEmuSetup.180422.exe
-md5_arc=f83c682926b44e5c3010da7cb05b82a6
-md5_exe=ca36106b8dbecbca68c3c2132afc3e6b
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180422.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180422.exe?use_mirror=autoselect
+version=180427
+location_arc=4301087,xA58EDD95,https://github.com/Maximus5/ConEmu/releases/download/v18.04.27/ConEmuPack.180427.7z
+location_exe=6566976,xF64EE43B,https://github.com/Maximus5/ConEmu/releases/download/v18.04.27/ConEmuSetup.180427.exe
+md5_arc=5f1ff8d2ab8f7c2bd82af7f7436435b3
+md5_exe=32a51524473c3e183c3e5fc5867f017e
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180427.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180427.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=180422
-location_arc=4300834,x9DB30FFC,https://github.com/Maximus5/ConEmu/releases/download/v18.04.22/ConEmuPack.180422.7z
-location_exe=6574144,xDB4D87D9,https://github.com/Maximus5/ConEmu/releases/download/v18.04.22/ConEmuSetup.180422.exe
-md5_arc=f83c682926b44e5c3010da7cb05b82a6
-md5_exe=ca36106b8dbecbca68c3c2132afc3e6b
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180422.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180422.exe?use_mirror=autoselect
+version=180427
+location_arc=4301087,xA58EDD95,https://github.com/Maximus5/ConEmu/releases/download/v18.04.27/ConEmuPack.180427.7z
+location_exe=6566976,xF64EE43B,https://github.com/Maximus5/ConEmu/releases/download/v18.04.27/ConEmuSetup.180427.exe
+md5_arc=5f1ff8d2ab8f7c2bd82af7f7436435b3
+md5_exe=32a51524473c3e183c3e5fc5867f017e
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180427.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180427.exe?use_mirror=autoselect
