ConEmu 180429 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=180427
-location_arc=4301087,xA58EDD95,https://github.com/Maximus5/ConEmu/releases/download/v18.04.27/ConEmuPack.180427.7z
-location_exe=6566976,xF64EE43B,https://github.com/Maximus5/ConEmu/releases/download/v18.04.27/ConEmuSetup.180427.exe
-md5_arc=5f1ff8d2ab8f7c2bd82af7f7436435b3
-md5_exe=32a51524473c3e183c3e5fc5867f017e
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180427.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180427.exe?use_mirror=autoselect
+version=180429
+location_arc=4300770,xE0AF9810,https://github.com/Maximus5/ConEmu/releases/download/v18.04.29/ConEmuPack.180429.7z
+location_exe=6571072,xD20F00E7,https://github.com/Maximus5/ConEmu/releases/download/v18.04.29/ConEmuSetup.180429.exe
+md5_arc=b83a4ef3c00b12914833cc839899963c
+md5_exe=0dc788dd4414d7652060ea453eda35bb
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180429.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180429.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=180427
-location_arc=4301087,xA58EDD95,https://github.com/Maximus5/ConEmu/releases/download/v18.04.27/ConEmuPack.180427.7z
-location_exe=6566976,xF64EE43B,https://github.com/Maximus5/ConEmu/releases/download/v18.04.27/ConEmuSetup.180427.exe
-md5_arc=5f1ff8d2ab8f7c2bd82af7f7436435b3
-md5_exe=32a51524473c3e183c3e5fc5867f017e
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180427.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180427.exe?use_mirror=autoselect
+version=180429
+location_arc=4300770,xE0AF9810,https://github.com/Maximus5/ConEmu/releases/download/v18.04.29/ConEmuPack.180429.7z
+location_exe=6571072,xD20F00E7,https://github.com/Maximus5/ConEmu/releases/download/v18.04.29/ConEmuSetup.180429.exe
+md5_arc=b83a4ef3c00b12914833cc839899963c
+md5_exe=0dc788dd4414d7652060ea453eda35bb
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180429.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180429.exe?use_mirror=autoselect
