ConEmu 180503 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=180429
-location_arc=4300770,xE0AF9810,https://github.com/Maximus5/ConEmu/releases/download/v18.04.29/ConEmuPack.180429.7z
-location_exe=6571072,xD20F00E7,https://github.com/Maximus5/ConEmu/releases/download/v18.04.29/ConEmuSetup.180429.exe
-md5_arc=b83a4ef3c00b12914833cc839899963c
-md5_exe=0dc788dd4414d7652060ea453eda35bb
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180429.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180429.exe?use_mirror=autoselect
+version=180503
+location_arc=4305345,xF1720760,https://github.com/Maximus5/ConEmu/releases/download/v18.05.03/ConEmuPack.180503.7z
+location_exe=6570048,x9884FCD2,https://github.com/Maximus5/ConEmu/releases/download/v18.05.03/ConEmuSetup.180503.exe
+md5_arc=2819a9555c0c8eceab1f6d3203125fdb
+md5_exe=e9a3107d62b46b6bd64a7c51678ebbda
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180503.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180503.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=180429
-location_arc=4300770,xE0AF9810,https://github.com/Maximus5/ConEmu/releases/download/v18.04.29/ConEmuPack.180429.7z
-location_exe=6571072,xD20F00E7,https://github.com/Maximus5/ConEmu/releases/download/v18.04.29/ConEmuSetup.180429.exe
-md5_arc=b83a4ef3c00b12914833cc839899963c
-md5_exe=0dc788dd4414d7652060ea453eda35bb
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180429.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180429.exe?use_mirror=autoselect
+version=180503
+location_arc=4305345,xF1720760,https://github.com/Maximus5/ConEmu/releases/download/v18.05.03/ConEmuPack.180503.7z
+location_exe=6570048,x9884FCD2,https://github.com/Maximus5/ConEmu/releases/download/v18.05.03/ConEmuSetup.180503.exe
+md5_arc=2819a9555c0c8eceab1f6d3203125fdb
+md5_exe=e9a3107d62b46b6bd64a7c51678ebbda
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180503.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180503.exe?use_mirror=autoselect
