ConEmu 180506 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=180503
-location_arc=4305345,xF1720760,https://github.com/Maximus5/ConEmu/releases/download/v18.05.03/ConEmuPack.180503.7z
-location_exe=6570048,x9884FCD2,https://github.com/Maximus5/ConEmu/releases/download/v18.05.03/ConEmuSetup.180503.exe
-md5_arc=2819a9555c0c8eceab1f6d3203125fdb
-md5_exe=e9a3107d62b46b6bd64a7c51678ebbda
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180503.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180503.exe?use_mirror=autoselect
+version=180506
+location_arc=4465717,x5F159CDE,https://github.com/Maximus5/ConEmu/releases/download/v18.05.06/ConEmuPack.180506.7z
+location_exe=6743616,x2AA3E922,https://github.com/Maximus5/ConEmu/releases/download/v18.05.06/ConEmuSetup.180506.exe
+md5_arc=52bb17db47b66d55f228aba8d4819aa1
+md5_exe=ca4d340d4e5ec192685d263580c556a3
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180506.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180506.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=180503
-location_arc=4305345,xF1720760,https://github.com/Maximus5/ConEmu/releases/download/v18.05.03/ConEmuPack.180503.7z
-location_exe=6570048,x9884FCD2,https://github.com/Maximus5/ConEmu/releases/download/v18.05.03/ConEmuSetup.180503.exe
-md5_arc=2819a9555c0c8eceab1f6d3203125fdb
-md5_exe=e9a3107d62b46b6bd64a7c51678ebbda
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180503.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180503.exe?use_mirror=autoselect
+version=180506
+location_arc=4465717,x5F159CDE,https://github.com/Maximus5/ConEmu/releases/download/v18.05.06/ConEmuPack.180506.7z
+location_exe=6743616,x2AA3E922,https://github.com/Maximus5/ConEmu/releases/download/v18.05.06/ConEmuSetup.180506.exe
+md5_arc=52bb17db47b66d55f228aba8d4819aa1
+md5_exe=ca4d340d4e5ec192685d263580c556a3
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180506.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180506.exe?use_mirror=autoselect
