ConEmu 180528 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=180506
-location_arc=4465717,x5F159CDE,https://github.com/Maximus5/ConEmu/releases/download/v18.05.06/ConEmuPack.180506.7z
-location_exe=6743616,x2AA3E922,https://github.com/Maximus5/ConEmu/releases/download/v18.05.06/ConEmuSetup.180506.exe
-md5_arc=52bb17db47b66d55f228aba8d4819aa1
-md5_exe=ca4d340d4e5ec192685d263580c556a3
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180506.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180506.exe?use_mirror=autoselect
+version=180528
+location_arc=4468374,xE7CBC38F,https://github.com/Maximus5/ConEmu/releases/download/v18.05.28/ConEmuPack.180528.7z
+location_exe=6744640,x3C4904D9,https://github.com/Maximus5/ConEmu/releases/download/v18.05.28/ConEmuSetup.180528.exe
+md5_arc=66100a80fce6f54e15f8883c706f8030
+md5_exe=6454745c0db145e731ad0126c405492d
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180528.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180528.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=180506
-location_arc=4465717,x5F159CDE,https://github.com/Maximus5/ConEmu/releases/download/v18.05.06/ConEmuPack.180506.7z
-location_exe=6743616,x2AA3E922,https://github.com/Maximus5/ConEmu/releases/download/v18.05.06/ConEmuSetup.180506.exe
-md5_arc=52bb17db47b66d55f228aba8d4819aa1
-md5_exe=ca4d340d4e5ec192685d263580c556a3
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180506.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180506.exe?use_mirror=autoselect
+version=180528
+location_arc=4468374,xE7CBC38F,https://github.com/Maximus5/ConEmu/releases/download/v18.05.28/ConEmuPack.180528.7z
+location_exe=6744640,x3C4904D9,https://github.com/Maximus5/ConEmu/releases/download/v18.05.28/ConEmuSetup.180528.exe
+md5_arc=66100a80fce6f54e15f8883c706f8030
+md5_exe=6454745c0db145e731ad0126c405492d
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180528.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180528.exe?use_mirror=autoselect
