ConEmu 180617 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=180528
-location_arc=4468374,xE7CBC38F,https://github.com/Maximus5/ConEmu/releases/download/v18.05.28/ConEmuPack.180528.7z
-location_exe=6744640,x3C4904D9,https://github.com/Maximus5/ConEmu/releases/download/v18.05.28/ConEmuSetup.180528.exe
-md5_arc=66100a80fce6f54e15f8883c706f8030
-md5_exe=6454745c0db145e731ad0126c405492d
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180528.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180528.exe?use_mirror=autoselect
+version=180617
+location_arc=4473943,x80534F58,https://github.com/Maximus5/ConEmu/releases/download/v18.06.17/ConEmuPack.180617.7z
+location_exe=6747712,x5DB065A2,https://github.com/Maximus5/ConEmu/releases/download/v18.06.17/ConEmuSetup.180617.exe
+md5_arc=02ce84efc2f0b8e49864eacb1d51793a
+md5_exe=12cd631c4063f8dc0e1db3c6b4f5d1e8
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180617.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180617.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=180528
-location_arc=4468374,xE7CBC38F,https://github.com/Maximus5/ConEmu/releases/download/v18.05.28/ConEmuPack.180528.7z
-location_exe=6744640,x3C4904D9,https://github.com/Maximus5/ConEmu/releases/download/v18.05.28/ConEmuSetup.180528.exe
-md5_arc=66100a80fce6f54e15f8883c706f8030
-md5_exe=6454745c0db145e731ad0126c405492d
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180528.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180528.exe?use_mirror=autoselect
+version=180617
+location_arc=4473943,x80534F58,https://github.com/Maximus5/ConEmu/releases/download/v18.06.17/ConEmuPack.180617.7z
+location_exe=6747712,x5DB065A2,https://github.com/Maximus5/ConEmu/releases/download/v18.06.17/ConEmuSetup.180617.exe
+md5_arc=02ce84efc2f0b8e49864eacb1d51793a
+md5_exe=12cd631c4063f8dc0e1db3c6b4f5d1e8
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180617.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180617.exe?use_mirror=autoselect
