ConEmu 180626 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=180617
-location_arc=4473943,x80534F58,https://github.com/Maximus5/ConEmu/releases/download/v18.06.17/ConEmuPack.180617.7z
-location_exe=6747712,x5DB065A2,https://github.com/Maximus5/ConEmu/releases/download/v18.06.17/ConEmuSetup.180617.exe
-md5_arc=02ce84efc2f0b8e49864eacb1d51793a
-md5_exe=12cd631c4063f8dc0e1db3c6b4f5d1e8
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180617.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180617.exe?use_mirror=autoselect
+version=180626
+location_arc=4473350,x6F3472D9,https://github.com/Maximus5/ConEmu/releases/download/v18.06.26/ConEmuPack.180626.7z
+location_exe=6750272,xF7A8672A,https://github.com/Maximus5/ConEmu/releases/download/v18.06.26/ConEmuSetup.180626.exe
+md5_arc=1426aba83f7e64c0890971306a4f0957
+md5_exe=d75fc5367027c1c3458f99d5ab029717
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180626.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180626.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=180617
-location_arc=4473943,x80534F58,https://github.com/Maximus5/ConEmu/releases/download/v18.06.17/ConEmuPack.180617.7z
-location_exe=6747712,x5DB065A2,https://github.com/Maximus5/ConEmu/releases/download/v18.06.17/ConEmuSetup.180617.exe
-md5_arc=02ce84efc2f0b8e49864eacb1d51793a
-md5_exe=12cd631c4063f8dc0e1db3c6b4f5d1e8
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180617.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180617.exe?use_mirror=autoselect
+version=180626
+location_arc=4473350,x6F3472D9,https://github.com/Maximus5/ConEmu/releases/download/v18.06.26/ConEmuPack.180626.7z
+location_exe=6750272,xF7A8672A,https://github.com/Maximus5/ConEmu/releases/download/v18.06.26/ConEmuSetup.180626.exe
+md5_arc=1426aba83f7e64c0890971306a4f0957
+md5_exe=d75fc5367027c1c3458f99d5ab029717
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180626.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180626.exe?use_mirror=autoselect
